4.5 -> 5.0:
    - jbj: fix: %verifyscript broken by scaremem elimination.
    - jbj: another missed level of indirection. leave the bandaid, won't hurt.
    - jbj: bandaid for a --import hge recursion problem. real fix soon.
    - jbj: fix: missed a level of indirection.
    - bero: Initialize arch and os in rpmtsAddInstallElement, fixing crash when
      installing a src.rpm
    - jbj: fix: typo broke i32p indices when sizeof(void *) != sizeof(int_32).
    - jbj: add RPM_INT64_TYPE rpmdb indices (untested).
    - jbj: ah, there's the rpmdb basenames memory leak (but leave disabled).
    - jbj: mark (and disable) rpmv3 Provides: N = E:V-R retrofit.
    - jbj: mark (and disable) rpmv3 basenames hacks (likely fixing rpmdb leak).
    - jbj: ditto for python/* too.
    - jbj: for now, revert to headerGetEntry where needed, avoid recursions.
    - jbj: drill HE_t down through the header extension tags.
    - jbj: drill rpmTagType everywhere.
    - jbj: move rpmTag typedef and HGE_t et al protos to header.h.
    - jbj: lose the rpmfi hge/hae/hme/hre/hfd vectors.
    - jbj: yet more hge fixups.
    - jbj: reqprov.c: use headerGetExtension everywhere.
    - jbj: parsePreamble.c: use headerGetExtension everywhere.
    - jbj: pack.c: use headerGetExtension everywhere.
    - jbj: files.c: fix: append to pkg->fileList.
    - jbj: files.c: use headerGetExtension everywhere.
    - jbj: transaction.c: eliminate hge warning.
    - jbj: rpmds.c: eliminate hge warning.
    - jbj: psm.c: eliminate a warning, simplify hge usage.
    - jbj: package.c: use headerGetExtension everywhere (fix double free).
    - jbj: fix: grr, headerGetEntry return code is backwards.
    - jbj: clean up some warnings.
    - jbj: change HGE_t prototype to see what remains to be fixed.
    - jbj: rpmsignature.c: use headerGetExtension everywhere.
    - jbj: rpmrollback.c: use headerGetExtension everywhere.
    - jbj: use (*hge), not headerGetExtension, everywhere.